--- a/testheroku/.env.var
+++ b/testheroku/.env.var
@@ -7,22 +7,23 @@ DEBUG_DESENV=True
 ALLOWED_HOSTS_DEV=.localhost,127.0.0.1
 # ####################################Postgree
 DB_NAME=
-DB_USER=postgres
+DB_USER=
 DB_PASSWORD=
 DB_HOST=
 # #################################### Heroku
 # SETTINGS_MODULE_PATH=testheroku.settings.production
 ALLOWED_HOSTS=.herokuapp.com
-DATABASE_URL=
+DATABASE_URL="AutomaticHeroku"
 # #################################### AWS
-USE_S3 = False
-AWS_STORAGE_BUCKET_NAME_DESENV=
+USE_S3 = True
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_STORAGE_BUCKET_NAME=
-DISABLE_COLLECTSTATIC=1 #1 seta para desabilitado
+AWS_STORAGE_BUCKET_NAME_DESENV=
+DISABLE_COLLECTSTATIC=1           #1 seta para desabilitado
 # ########################################### CELERY
 REDIS_URL_DESENV = 'redis://localhost:6379/0'
+REDIS_URL = 'redis://localhost:6379/0'
 CELERY_BROKER_URL = REDIS_URL_DESENV
 CELERY_TASK_ALWAYS_EAGER_DESENV = False
 CELERY_TASK_ALWAYS_EAGER = False
