--- a/testheroku/Procfile
+++ b/testheroku/Procfile
@@ -1,2 +1,2 @@
 web: gunicorn testheroku.wsgi --log-file -
-worker: celery -A testheroku worker -B -l INFO
+worker: celery -A testheroku worker --loglevel=info
